packages/core/src/components/breadcrumb/breadcrumb.scss
/*
 * SPDX-FileCopyrightText: 2023 Siemens AG
 *
 * SPDX-License-Identifier: MIT
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

@import 'common-variables';
@import 'mixins/hover';
@import 'mixins/text-truncation';

@mixin crumb-hover($variant) {
  @include hover {
    background-color: var(--theme-breadcrumb-#{$variant}--background--hover);

    .crumb-text,
    .glyph {
      color: var(--theme-breadcrumb-#{$variant}--color--hover);
    }

    .crumb-text + .glyph-chevron-right-small {
      color: var(--theme-breadcrumb-#{$variant}-arrow--color--hover);
    }
  }

  @include active {
    background-color: var(--theme-breadcrumb-#{$variant}--background--active);

    .crumb-text,
    .glyph {
      color: var(--theme-breadcrumb-#{$variant}--color--active);
    }

    .crumb-text + .glyph-chevron-right-small {
      color: var(--theme-breadcrumb-#{$variant}-arrow--color--active);
    }
  }
}

@mixin breadcrumb($variant) {
  .crumb.#{$variant} {
    background-color: var(--theme-breadcrumb-#{$variant}--background);
    border: var(--theme-btn--#{$variant}-thickness) solid transparent;
    transition: $default-time;

    .crumb-text,
    .glyph {
      color: var(--theme-breadcrumb-#{$variant}--color);
    }

    .crumb-text + .glyph-chevron-right-small {
      color: var(--theme-breadcrumb-#{$variant}-arrow--color);
    }

    &.last .crumb-text {
      color: var(--theme-breadcrumb-#{$variant}-last--color);
    }

    &.clickable:not(.remove-hover) {
      @include hover {
        background-color: var(
          --theme-breadcrumb-#{$variant}--background--hover
        );

        .crumb-text,
        .glyph {
          color: var(--theme-breadcrumb-#{$variant}--color--hover);
        }

        .crumb-text + .glyph-chevron-right-small {
          color: var(--theme-breadcrumb-#{$variant}-arrow--color--hover);
        }
      }

      @include active {
        background-color: var(
          --theme-breadcrumb-#{$variant}--background--active
        );

        .crumb-text,
        .glyph {
          color: var(--theme-breadcrumb-#{$variant}--color--active);
        }

        .crumb-text + .glyph-chevron-right-small {
          color: var(--theme-breadcrumb-#{$variant}-arrow--color--active);
        }
      }
    }
  }
}

:host {
  display: flex;
  height: $large-control-height;
  justify-content: flex-start;
  align-items: center;
  background-color: transparent;
  overflow: hidden;

  .crumb {
    position: relative;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    white-space: nowrap;
    border-radius: var(--theme-breadcrumb--border-radius);
    height: $default-control-height;
    max-height: $default-control-height;
    min-width: 0;
    margin-inline-end: $tiny-space;
    padding: $small-space 0 $small-space $tiny-space;
    outline: none;
    cursor: pointer;

    @include crumb-hover('btn');

    .crumb-text {
      @include ellipsis;
      display: flex;
      align-items: center;
      min-width: 0;
      font-weight: $font-weight-bold;

      ix-icon {
        margin-inline-end: $tiny-space;
      }
    }

    .crumb-text + .glyph-chevron-right-small {
      margin-inline-start: $tiny-space;
      margin-inline-end: 0; // Overwrite global selector: .btn .glyph
    }

    &.last {
      background-color: transparent !important;
      cursor: default;
      padding-inline-end: $tiny-space;
    }

    &.clickable:not(.remove-hover) {
      @include focus-visible {
        border-color: var(--theme-focus--border-color);
      }
    }

    &:not(:last-of-type) {
      flex-shrink: 0;
      max-width: 14rem;
    }
  }

  .crumb-dropdown {
    overflow: visible;

    .glyph::after {
      display: none;
    }
  }

  .remove-anchor::after {
    display: none;
  }

  .more-text {
    display: flex;

    .more-text-ellipsis {
      width: 1rem;
      display: inline-block;
      font-weight: $font-weight-bold;
    }

    .glyph {
      line-height: unset;
    }
  }

  .crumb-items {
    display: contents;
  }

  @include breadcrumb('btn');
  @include breadcrumb('ghost');
}

